<resources>
    <string name="app_name">Factory TestX</string>
    <string name="test_camera_front">前置摄像头测试</string>
    <string name="test_SD">SD卡测试</string>
    <string name="test_vib">震动测试</string>
    <string name="test_bt">蓝牙测试</string>
    <string name="test_wifi">WIFI测试</string>
    <string name="app_name_fm">测试FM：请插入耳机，并注意有无外放的FM声音！！(频段：96.2)</string>
    <string name="app_name_media">正在测试SD卡…</string>
    <string name="test_imei_next">点击测试LCD和录音机</string>
    <string name="test_imei_serialno">序列号：未知</string>
    <string name="test_SDcard">点击进入SD卡测试</string>
    <string name="test_SIMcard">点击进入SIM卡测试</string>
    <string name="sdcard_info">检测到内置SD卡</string>
    <string name="sdcard_notpass_result">没有检测到内置SD卡</string>
    <string name="sdcardouter_notpass_result">没有检测到外置SD卡</string>
    <string name="sdcard_pass">PASS</string>
    <string name="sdcard_not_pass">FAIL</string>
    <string name="sdcard_result">测试结果：</string>
    <string name="sdcard_total_capacity">总共：</string>
    <string name="sdcard_available_capacity">可用：</string>
    <string name="sdcard_write">写入文件：未知</string>
    <string name="sdcard_read">读取文件：未知</string>
    <string name="sdcard_write_pass">写入文件：成功</string>
    <string name="sdcard_write_fail">写入文件：失败</string>
    <string name="sdcard_read_pass">读取文件：成功</string>
    <string name="sdcard_read_fail">读取文件：失败</string>
    <string name="sdcard_outer_info">检测到外置SD卡</string>
    <string name="bt_fault">蓝牙搜索: 失败</string>
    <string name="media_success">SD卡测试: 成功</string>
    <string name="meida_fault">SD卡测试: 失败</string>
    <string name="fm_success">FM测试: 成功</string>
    <string name="fm_fault">FM测试: 失败</string>
    <string name="test_headloop_next">点击进入耳机测试</string>
    <string name="warnning">请输入实体键：</string>
    <string name="unkown">未知</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="power">Power</string>
    <string name="camera">Camera</string>
    <string name="test_camera_next">点击进入麦克回路测试</string>
    <string name="test_audio_next">点击进入按键测试</string>
    <string name="test_audio_headset">耳机左声道测试</string>
    <string name="test_audio_headset1">耳机右声道测试</string>
    <string name="test_key_next">点击进入按键测试</string>
    <string name="warn">注意：</string>
    <string name="add_headset">请插入耳机之后再测试！</string>
    <string name="backStr">点击打开后置摄像头</string>
    <string name="frontStr">点击打开前置摄像头</string>
    <string name="camera_error">打开相机出错！</string>
    <string name="rwq">是否正常？</string>
    <string name="yes">正常</string>
    <string name="no">不正常</string>
    <string name="vib_but">点击开始震动</string>
    <string name="prox_aa">点击进入震动测试</string>
    <string name="prox_gps">点击进入震动和GPS测试</string>
    <string name="prox_bb">点击进入距离感应器测试</string>
    <string name="see_result">点击查看测试结果</string>
    <string name="result">测试结果</string>
    <string name="re_result">由于回路测试会导致系统无声等问题，请重启手机还原系统默认值</string>
    <string name="model">型号: </string>
    <string name="receiver_next">点击进入受话器测试</string>
    <string name="ref_test_audio">副麦克回路测试</string>
    <string name="ref_test">点击测试副麦克回路</string>
    <string name="main_test_audio_item">请对着手机的主麦克风吹气或者说话，声音将从耳机听筒中播放出来</string>
    <string name="app_name_hall_sensor">正在测试霍尔传感器…</string>
    <string name="hall_sensor_success">霍尔传感器检测: 成功</string>
    <string name="hall_sensor_fault">霍尔传感器检测: 失败</string>
    <string name="ledString">请注意观察LED指示灯颜色的变化!!!</string>
    <string name="app_name_smart_pa">音频测试</string>
    <string name="smart_pa_success">音频测试: 成功</string>
    <string name="smart_pa_fault">音频测试: 失败</string>
    <string name="smart_pa_test">测试</string>
    <string name="test_gycoscope">陀螺仪测试</string>
    <string name="gyroscope_show">请随意方向转动手机</string>
    <string name="gyroscope_x_axis">X 轴: </string>
    <string name="gyroscope_y_axis">Y 轴: </string>
    <string name="gyroscope_z_axis">Z 轴: </string>
    <string name="gyroscope_test_success">测试成功!</string>
    <string name="gyroscope_test_fault">测试失败!</string>
    <string name="gyroscope_test_pass">PASS</string>
    <string name="gyroscope_test_fail">FAIL</string>
    <string name="test_gycoscope_next">点击进入小部件测试</string>
    <string name="key_call">Call</string>
    <string name="key_endcall">EndCall</string>
    <string name="sagereal_tee_integrated_status">integrated</string>
    <string name="key_integrated_ok">OK</string>
    <string name="key_integrated_fail">FAIL</string>
    <string name="engineer_mode">工厂模式</string>
    <string name="auto_test_btn">自动测试</string>
    <string name="manual_test_btn">手动测试</string>
    <string name="audio_test_btn">打开调试模式</string>
    <string name="test_manual_tv">手动测试</string>
    <string name="imei_test_btn">基本信息</string>
    <string name="report_test_btn">测试报告</string>
    <string name="reset_test_btn">恢复出厂设置</string>
    <string name="reset_dialog_test">确定要恢复出厂设置吗?</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_yes">确定</string>
    <string name="china_tv">中文</string>
    <string name="factory_version_tv">软件版本：V.0.1 for P_go</string>
    <string name="power_status_now">充电状态:</string>
    <string name="power_chongdian">充电</string>
    <string name="power_weichongdian">未充电</string>
    <string name="power_now">当前电量:</string>
    <string name="power_dianya_now">电池电压:</string>
    <string name="consumption_current">当前电流:</string>
    <string name="charge_voltage">充电电压:</string>
    <string name="charge_current">充电电流:</string>
    <string name="usb_test_fail">充电测试失败,请检查充电器是否插入</string>
    <string name="remind_usb_out_text">充电测试完成，请拔出充电器</string>
    <string name="remind_vibrate_text">请检查振动是否正常?</string>
    <string name="ctp_pass_fail">测试完成后，按音量下键成功，按音量上键失败</string>
    <string name="remind_usb_vibrate_text">请检查插入充电器是否振动?</string>
    <string name="app_name_psensor">正在测试距离感应器…</string>
    <string name="test_proxsensor">距离感应器测试</string>
    <string name="psensor_success">距离感应器检测: 成功</string>
    <string name="psensor_fault">距离感应器检测: 失败</string>
    <string name="lsensor_testing">"光线传感器测试中..."</string>
    <string name="lsensor_success">光线感应器检测: 成功</string>
    <string name="lsensor_fault">光线感应器检测: 失败</string>
    <string name="app_name_gsensor">正在检测重力传感器…</string>
    <string name="test_gsensor">重力传感器检测</string>
    <string name="gsensor_fault">重力传感器检测: 失败</string>
    <string name="gsensor_success">重力传感器检测: 成功</string>
    <string name="nfc_test">NFC检测…</string>
    <string name="nfc_test_fail">NFC检测: 失败</string>
    <string name="nfc_test_success">NFC检测: 成功</string>
    <string name="success">成功</string>
    <string name="fault">失败</string>
    <string name="bt_success">蓝牙搜索: </string>
    <string name="app_name_bt">正在测试蓝牙…</string>
    <string name="compass_show">请向右旋转45度以上测试</string>
    <string name="compass_success">指南针检测: 成功</string>
    <string name="compass_fail">指南针检测: 失败</string>
    <string name="num">Num:</string>
    <string name="test_imei_imei1">IMEI1：未知</string>
    <string name="test_imei_imei2">IMEI2：未知</string>
    <string name="test_imei_imsi1">IMSI1：未知</string>
    <string name="test_imei_imsi2">IMSI2：未知</string>
    <string name="imei_serialno">序列号：</string>
    <string name="imei_imei1">IMEI1：</string>
    <string name="imei_imei2">IMEI2：</string>
    <string name="imei_imsi1">IMSI1：</string>
    <string name="imei_imsi2">IMSI2：</string>
    <string name="tpversion">TP型号: </string>
    <string name="wifi_address">WIFI地址：</string>
    <string name="bt_address">蓝牙地址：</string>
    <string name="version">软件版本号: </string>
    <string name="status_sim1">SIM1状态：</string>
    <string name="status_sim2">SIM2状态：</string>
    <string name="status_nosim">无卡</string>
    <string name="status_unknow">无效卡</string>
    <string name="status_netlock">OK</string>
    <string name="status_pinlock">OK</string>
    <string name="status_puklock">OK</string>
    <string name="status_good">OK</string>
    <string name="sd1_view_test">内置SD卡：无卡</string>
    <string name="sd1_have_view_test">内置SD卡：有卡</string>
    <string name="total_capacity">总容量：</string>
    <string name="sd2_view_test">外置SD卡：无卡</string>
    <string name="sd2_have_view_test">外置SD卡：有卡</string>
    <string name="test_audio_flag">音频测试：NOK</string>
    <string name="imei_audioflag">音频测试：OK</string>
    <string name="tee_integrated">当前TEE状态:</string>
    <string name="tee_integrated_yes">集成</string>
    <string name="sagereal_is_otp_support">support</string>
    <string name="otp_support">是否支持OTP:</string>
    <string name="otp_support_yes">支持</string>
    <string name="otp_support_no">不支持</string>
    <string name="tee_integrated_no">未集成</string>
    <string name="key_integrated">Google key状态:</string>
    <string name="main_test_audio">主麦克回路测试</string>
    <string name="audio_loop">主麦克回路测试</string>
    <string name="test_audio_item">请对着手机的麦克风吹气或说话</string>
    <string name="max_fail">声音不够大，MIC 测试未通过</string>
    <string name="max_pass">MIC 音量测试pass</string>
    <string name="test_recorder_play">播放录音</string>
    <string name="rrr">开始测试！</string>
    <string name="test_headset_item1">请插入耳机</string>
    <string name="test_headset_item2">带好耳机，并且对着耳机的麦克风吹气或说话，你会从耳机的听筒中听到声音</string>
    <string name="ref_test_audio_item">请对着手机的副麦克风吹气或者说话，声音将从耳机听筒中播放出来</string>
    <string name="test_headset_insert">请注意插入耳机符号应变绿色</string>
    <string name="not_available">FM当前不可用</string>
    <string name="fm_no_headset_text">要开始测试FM，请插入耳机（用作天线）.</string>
    <string name="remind_remove_headset">请拔出耳机测试</string>
    <string name="lcd">点击屏幕继续测试</string>
    <string name="remind_led_text">注意LED指示灯是否正常闪烁!!!</string>
    <string name="remind_ripple_text">请按压屏幕，观察是否有水波纹</string>
    <string name="flash_light">不要忘记检查闪光灯</string>
    <string name="sub_camera_led_light">不要忘记检查前摄补光灯</string>
    <string name="remind_back_camera_tv">后摄像头测试</string>
    <string name="remind_front_camera_tv">前摄像头测试</string>
    <string name="test_lcd_camera">切换前摄</string>
    <string name="clickpicature">拍照</string>
    <string name="sim1_view_test">SIM1状态：无卡</string>
    <string name="sim_date_test">信号强度：</string>
    <string name="sim_asu">asu</string>
    <string name="sim_dbm">dbm </string>
    <string name="sim2_view_test">SIM2状态：无卡</string>
    <string name="gps_fault">GPS未搜索到3颗星</string>
    <string name="app_name_gps">GPS正在搜星…</string>
    <string name="gps_test_time">测试时间：</string>
    <string name="gps_success">GPS搜索到3颗星: 成功</string>
    <string name="app_name_wifi">正在测试WIFI…</string>
    <string name="wifi_success">WIFI已连接: </string>
    <string name="wifi_fault">WIFI搜索: 失败</string>
    <string name="test_view_fail">如果测试失败,参考wifi列表</string>
    <string name="gps_warn">如果测试失败可以点击上方重测按钮进行重测</string>
    <string name="receiver">听筒测试</string>
    <string name="receiver_item1">请拔出耳机</string>
    <string name="receiver_item">请将耳朵靠近手机听筒，将会有一段语音从听筒中播放出来</string>
    <string name="remind_horn_text">请注意听,将会有一段语音从喇叭中播放出来</string>
    <string name="remind_isman_text">请选择铃声是男声还是女声</string>
    <string name="key_up">UP</string>
    <string name="key_down">DOWN</string>
    <string name="key_power_btn">POWER</string>
    <string name="key_back_btn">BACK</string>
    <string name="key_home_btn">HOME</string>
    <string name="key_menu_btn">MENU</string>
    <string name="key_camera_btn">CAMERA</string>
    <string name="key_hint">按下按键测试</string>
    <string name="remind_backlight_text">请检查手机亮度是否改变?</string>
    <string name="click">点击音量下侧键退出</string>
    <string name="remind_call_text">请点击按钮拨打112</string>
    <string name="not_test">未测项：</string>
    <string name="refresh">重测</string>
    <string name="test_success">通过</string>
    <string name="test_fail">失败</string>
    <string name="test_imei">基本信息</string>
    <string name="test_audio">主麦测试</string>
    <string name="test_key">按键＋振动＋亮度</string>
    <string name="msuccess">PASS</string>
    <string name="radio_test">FM Radio</string>
    <string name="key_share">SMART</string>
    <string name="test_fm_next">点击进入FM测试</string>
    <string name="test_mode_pass">测试完成</string>
</resources>