<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ff212121"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/test_imei"
            android:textColor="#FFFFFF"
            android:textSize="20sp  "
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/serialnoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/test_imei_serialno"
        android:textColor="#FFFF00"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/imei1View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/test_imei_imei1"
        android:textColor="#FFFF00"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/imei2View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/test_imei_imei2"
        android:textColor="#FFFF00"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/imsi1View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/test_imei_imsi1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/imsi2View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/test_imei_imsi2"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/version"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/bt_address"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wifiAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/wifi_address"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/sim1View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/status_sim1"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sim2View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/status_sim2"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/audioTestView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/test_audio_flag"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/otpSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/otp_support"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/teeStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/tee_integrated"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tp_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/tpversion"
        android:textColor="#FF0000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/keyStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/key_integrated"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/imei_success_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1.0"
            android:text="@string/test_success"
            android:textColor="#00FF00"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/imei_fail_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1.0"
            android:text="@string/test_fail"
            android:textColor="#FF0000"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
