<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/sdcard_inner_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_inner_total_capacity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_total_capacity"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_inner_available_capacity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_available_capacity"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_inner_write"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
	android:text="@string/sdcard_write"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_inner_read"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
	android:text="@string/sdcard_read"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/sd1_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_result"
        android:textSize="18dp" />  

    <TextView
        android:id="@+id/sdcard_outer_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sdcard_outer_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_outer_total_capacity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_total_capacity"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_outer_available_capacity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_available_capacity"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_outer_write"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
	android:text="@string/sdcard_write"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sdcard_outer_read"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
	android:text="@string/sdcard_read"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/sd2_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sdcard_result"
        android:textSize="18dp" />  

 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom" >

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/test_fm_next"
            android:textSize="20dp" />
            
         <Button
            android:id="@+id/finish_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            android:text="@string/test_mode_pass"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>
