<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ff212121"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/test_audio"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/test_audio_item"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/max_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/max_fail"
            android:textColor="#FF0000"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/max_notice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/max_pass"
            android:textColor="#00FF00"
            android:textSize="21sp"
            android:visibility="gone" />

        <com.dyc.factorymode.VUMeter
            android:id="@+id/uvMeter"
            android:layout_width="250px"
            android:layout_height="100px"
            android:layout_centerInParent="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/test_recorder_play"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/test_againButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/refresh"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/audio_success_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1.0"
            android:enabled="false"
            android:text="@string/test_success"
            android:textColor="#00FF00"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/audio_fail_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1.0"
            android:text="@string/test_fail"
            android:textColor="#FF0000"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
